[package]
name = "wasdb_query"
version = "0.1.0"
edition = "2024"
[dependencies]
wasdb_catalog = { path = "../wasdb_catalog" }
wasdb_tx = { version = "0.1.0", path = "../wasdb_tx" }

[dev-dependencies]
tempfile = "3.27.0"
wasdb_storage = { path = "../wasdb_storage" }
wasdb_buffer = { path = "../wasdb_buffer" }
wasdb_btree = { path = "../wasdb_btree" }
